Change route for healthcheck
